Påbegynt kanaritest WIP
