# src/main/resources/openapi/AktivitetsplanSpec.yaml
@@ -236,7 +236,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/oppfolgingsperiode'
+                  $ref: '#/components/schemas/aktivitet'
   /internal/api/v1/aktivitet/{aktivitetId}:
     get:
       operationId: hentAktivitet
@@ -257,3 +257,46 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/aktivitet'
+  /internal/api/v1/oppfolgingsperiode/:
+    get:
+      operationId: hentOppfolgingsperioder
+      tags:
+        - Aktiviteter
+      description: ''
+      parameters:
+        - name: aktorId
+          in: query
+          required: true
+          schema:
+            type: string
+          description: AktørID til personen man ønsker å hente ut oppfolgingsperioder for
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/oppfolgingsperiode'
+  /internal/api/v1/oppfolgingsperiode/{oppfolgingsperiodeId}:
+    get:
+      operationId: hentOppfolgingsperiode
+      tags:
+        - Aktiviteter
+      description: ''
+      parameters:
+        - name: oppfolgingsperiodeId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+          description: Uuid til oppfolgingsperioden
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/oppfolgingsperiode'
